; ModuleID = '/home/carl/AnghaBench/git/extr_daemon.c_drop_privileges.c'
source_filename = "/home/carl/AnghaBench/git/extr_daemon.c_drop_privileges.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.credentials = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32, i32 }

@.str = private unnamed_addr constant [23 x i8] c"cannot drop privileges\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.credentials*)* @drop_privileges to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @drop_privileges(%struct.credentials* %0) #0 {
  %2 = alloca %struct.credentials*, align 8
  store %struct.credentials* %0, %struct.credentials** %2, align 8
  %3 = load %struct.credentials*, %struct.credentials** %2, align 8
  %4 = icmp ne %struct.credentials* %3, null
  br i1 %4, label %5, label %32

5:                                                ; preds = %1
  %6 = load %struct.credentials*, %struct.credentials** %2, align 8
  %7 = getelementptr inbounds %struct.credentials, %struct.credentials* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.credentials*, %struct.credentials** %2, align 8
  %12 = getelementptr inbounds %struct.credentials, %struct.credentials* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = call i64 @initgroups(i32 %10, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %30, label %16

16:                                               ; preds = %5
  %17 = load %struct.credentials*, %struct.credentials** %2, align 8
  %18 = getelementptr inbounds %struct.credentials, %struct.credentials* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = call i64 @setgid(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %30, label %22

22:                                               ; preds = %16
  %23 = load %struct.credentials*, %struct.credentials** %2, align 8
  %24 = getelementptr inbounds %struct.credentials, %struct.credentials* %23, i32 0, i32 0
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i64 @setuid(i32 %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %22, %16, %5
  %31 = call i32 @die(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  br label %32

32:                                               ; preds = %30, %22, %1
  ret void
}

declare dso_local i64 @initgroups(i32, i32) #1

declare dso_local i64 @setgid(i32) #1

declare dso_local i64 @setuid(i32) #1

declare dso_local i32 @die(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
